--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "~10.1.6",
     "@angular/platform-browser-dynamic": "~10.1.6",
     "@angular/router": "~10.1.6",
+    "@sweetalert2/ngx-sweetalert2": "^8.1.1",
     "bootstrap": "^4.5.3",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^10.11.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
