--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.1.6",
+    "@angular/cdk": "^11.0.3",
     "@angular/common": "~10.1.6",
     "@angular/compiler": "~10.1.6",
     "@angular/core": "~10.1.6",
@@ -19,9 +20,15 @@
     "@angular/platform-browser": "~10.1.6",
     "@angular/platform-browser-dynamic": "~10.1.6",
     "@angular/router": "~10.1.6",
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "@sweetalert2/ngx-sweetalert2": "^8.1.1",
+    "@types/chart.js": "^2.9.29",
+    "angular-bootstrap-md": "^10.1.1",
+    "animate.css": "^4.1.1",
     "bootstrap": "^4.5.3",
     "bootstrap-icons": "^1.2.1",
+    "chart.js": "^2.5.0",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.6.0",
     "sweetalert2": "^10.11.1",
     "tslib": "^2.0.0",
